@@ -15,6 +15,7 @@ export(availableCores)
 export(availableWorkers)
 export(connectionId)
 export(cpuLoad)
+export(freeCores)
 export(isConnectionValid)
 export(makeClusterMPI)
 export(makeClusterPSOCK)
